Adds the signup buttons on the menu, Adds the matching signupPopUp() function in the app.component.ts file

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,6 +11,10 @@
         {{p.title}}
       </button>
 
+      <button ion-item (click)="signupPopUp()" *ngIf="!currentUser">
+        Signup
+      </button>
+
       <button ion-item (click)="loginPopUp()" *ngIf="!currentUser">
         Login
       </button>
